adjust URL layout
- groups versions of a single module
- URL does not change when a standard goes from "draft" to "released"

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -1,8 +1,12 @@
+<!-- draft -->
 # `vt6/core1.0` - Fundamental protocols and interface contracts
 
-The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED",  "MAY", and "OPTIONAL" in this document are to be interpreted as described in [RFC 2119](https://tools.ietf.org/html/rfc2119).
+This document specifies version `1.0` of the VT6 module `core`.
+Refer to this document using the identifier `vt6/core1.0` or its canonical URL <https://vt6.io/std/core/1.0/>.
 
-**This is a non-normative draft.** Refer to this document using the identifier `vt6/core1.0` or using its canonical URL, <https://vt6.io/std/draft/core1.0>.
+**This is a non-normative draft.**
+
+The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED",  "MAY", and "OPTIONAL" in this document are to be interpreted as described in [RFC 2119](https://tools.ietf.org/html/rfc2119).
 
 ## 1. Definitions and platform requirements
 
@@ -191,18 +195,15 @@ When a new module specification is created, its major and minor version number M
 A module specification MUST clearly indicate its major and minor version number.
 The recommended way to do so is by including the following sentence near the start of the specification:
 
-```
-Refer to this document using the identifier `vt6/<module-name>.<version-number>`.
-```
-
-Herein, `<module-name>` is the module name including the major version number, and `<version-number>` is the module specification's minor version number.
+> This document specifies version `<major-version>.<minor-version>` of the VT6 module `<module-name-without-major-version>`.
+> Refer to this document using the identifier `vt6/<module-name>.<minor-version>` or its canonical URL `<url-to-module-spec>`.
 
 Everytime a new release of the module specification is made, its version number MUST be adjusted as follows:
 
 1. The minor version number is incremented.
 2. If the module specification has been changed in a backwards-incompatible way compared to the previous release, the major version number is incremented and the minor version number is reset to 0.
 
-This requirement does not apply when the release is only a prerelease that is not considered normative, and clearly labeled as such.
+This requirement does not apply when the release is only a draft or pre-release that is not considered normative, and clearly labeled as such.
 
 The following changes to a module specification are considered **backwards-compatible**:
 
