core1.0: proofreading, and specification of props/caps

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -112,16 +112,21 @@ A quoted string may represent a string containing double quotes or backslashes, 
 For example, the quoted string `"ab\\\"cd\""` represents the string `ab\"cd"`.
 For each string of Unicode characters, there exists exactly one quoted string that represents it.
 
+*Rationale:* We choose s-expressions because they can be implemented very easily, both on the generating and on the parsing side.
+They are as flexible and human-readable than JSON, TOML or YAML, but at the same time more compact than either of those.
+We do not include support for escape sequences because there is no apparent need for them.
+Users generating s-expressions will be using a programming or scripting language, and can take advantage of the escape sequences provided by these languages' string literals.
+Each s-expression adhering to this specification is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
+
 ### 2.2. Message format
 
 ```abnf
-version-number =  "0" / ( nzdigit *digit )
+version-number  = "0" / ( nzdigit *digit )
+strict-bareword = ( letter / "_" ) *( letter / "-" / "_")
 
-module-name    = ( letter / "_" ) *( letter / "." / "-" / "_" ) version-number
+module-name    = strict-bareword version-number
 
-function-name  = bareword
-
-message-type   = "want" / "have" / ( module-name "." function-name )
+message-type   = "want" / "have" / ( module-name "." strict-bareword )
 
 message        = "(" *space message-type *space *( ( s-expression / atom ) *space ) ")"
 ```
@@ -130,8 +135,8 @@ A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonem
 The first element of a message is therefore called the message's **type**.
 Any following elements of a message are called the message's **arguments**.
 A message may have arbitrarily many arguments, including zero arguments.
-As can be seen in the grammar definition above, a message type consists of a module name (see section TODO) and a function name, separated by a dot.
-As an exception, the function names "want" and "have" are message types without a module name (see section TODO).
+As can be seen in the grammar definition above, a message type name consists of a module name (see section 3.1) and a strict bareword, separated by a dot (see section 3.3).
+As an exception, the message types named "want" and "have" do not contain a module name (see section 4).
 
 ```abnf
 message-stream = *( *space message ) *space
@@ -140,6 +145,7 @@ message-stream = *( *space message ) *space
 A **VT6 message stream** (or just **message stream**, if the term is not ambiguous) is a sequence of VT6 messages which are optionally preceded, succeeded and/or separated by whitespace.
 
 **Rationale:** Allowing for whitespace between messages is especially useful when messages are emitted by a script in a language where a `print` operation appends a line separator by default.
+As with s-expressions above, a message stream is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
 
 ### 2.3. Server-client communication
 
@@ -148,6 +154,8 @@ Furthermore, it can read input data from standard input and write output data to
 This specification does not restrict the form of these input and output data.
 
 TODO: define behavior and semantics of multiplexed mode (need some sort of escape sequence for `\x1B{`)
+
+*Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional connection to their server and have no way of establishing a separate bidirectional connection to use as message input/output. The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
 
 ### 2.4. Invalid messages, and handling thereof
 
@@ -159,9 +167,9 @@ A message is **invalid** if...
 
 - the message's arguments do not conform to the requirements for the message's type, as stated in the specification defining the message type in question,
 
-- the size of the bytestring encoding the message exceeds the recipient's maximum message size (see section TODO), usually 4096 bytes, or
+- the size of the bytestring encoding the message exceeds the recipient's maximum message size (see sections 6.1 and 6.2), usually 4096 bytes, or
 
-- the message type is unknown or its use has not been negotiated with the recipient (see section TODO).
+- the message type name is unknown or its use has not been negotiated with the recipient (see section 4).
 
 A VT6 server receiving an invalid message from a VT6 client MUST act towards the client as if the message had never been received at all, and vice versa for messages from the server to the client.
 
@@ -175,28 +183,57 @@ If, while parsing a message stream, a message in the stream exceeds the recipien
 2. Try to parse a message starting from this character.
 3. If no valid message could be read, go back to step 1.
 
-*Rationale:* The basic idea is pretty obvious.
-We explicitly recommend to ignore quotes when trying to fast-forward to the start of the next message, because, given the simple syntax of s-expressions, the most likely syntax error is malformed quoted strings because of unescaped quotes or backslashes.
+*Rationale:* In step 1, we explicitly recommend to ignore quotes because, given the simple syntax of s-expressions, the most likely syntax error (other than unbalanced parentheses) is malformed quoted strings because of unescaped quotes or backslashes.
 
 ## 3. Modules
 
 The VT6 protocol specification is divided into **modules**, each of which has a **name**.
 For example, this document specifies the `core1` module.
 
-Each module contains the message types (see section TODO), properties (see section TODO) and capabilities (see section TODO) defined in its specification.
-For each message type and property name defined in a module's specification, the part of the message type property name before the dot MUST be equivalent to the module name.
-For example, a module with a name of `example2` may define a `example2.foo` message type and an `example2.bar` property, but not an `example1.foo` message type or a `sample2.bar` property.
+Each module contains the message types, properties and capabilities defined in its specification (see below).
+For each message type, property and capability defined in a module's specification, the part of its name before the dot MUST be equivalent to the module name.
+For example, a module with a name of `example2` may define a message type named `example2.foo` and a property named `example2.bar`, but not a message type named `example1.foo` or a property named `sample2.bar`.
+
+Each **message type** is defined by its name (see section 2.2) and a set of criteria describing when a message whose first element is the message type's name is to be considered valid by the recipient.
+These criteria include at least
+
+- the directionality (whether the message may be sent from a client to a server, or vice-versa, or both),
+- the capabilities that must be negotiated before messages of this type may be sent, if any,
+- the number of arguments that a message of this type may contain,
+- the format and/or structure of said arguments,
+- the behavior that is expected of the recipient party upon having received the message.
+
+A **property** is a quantifiable aspect which describes the server or the connection between client and server.
+Each concrete value of a property is represented as either an `<atom>` or an `<s-expression>`.
+The value of a property may influence how the server reacts to a message from the client.
+It may also influence how the client reacts to a message from the server if (and only if) the client has subscribed to this property (see section 5.1).
+
+Each property is defined by its name (see section 2.2) and at least the following criteria:
+
+- the set of values that the property can have,
+- the capabilities that must be negotiated before the client may subscribe to this property,
+- whether, and under which circumstances, the client may set the property's value (see section 5.3),
+- how the behavior of client and server is influenced by the value of this property.
+
+A **capability** is an aspect of the module specification that may not be supported by every server.
+The client therefore has to negotiate a capability (see section 4) before it can use the message types, properties or other behaviors restricted to this capability, even if the module which contains them has already been negotiated.
+
+For each object (message type, property or capability) in a module, that module SHALL NOT contain a different object of the same name.
+
+*Rationale:* Even though technically possible, it would cause unnecessary confusion if, for example, there were a message type with the same name as a property.
+
+### 3.1. Module versions
 
 Each module name, as accepted by the `<module-name>` grammar element defined above, has a trailing positive integer.
 This number is the **major version** of this module's specification.
-The module also has a second (positive integer) version number, which is called **minor version** and is not part of the module name.
+The module also has a second version number, also a positive integer, which is called **minor version** and is not part of the module name.
 
 When a new module specification is created, its major and minor version number MUST be set to 1 and 0, respectively.
 A module specification MUST clearly indicate its major and minor version number.
 The recommended way to do so is by including the following sentence near the start of the specification:
 
 > This document specifies version `<major-version>.<minor-version>` of the VT6 module `<module-name-without-major-version>`.
-> Refer to this document using the identifier `vt6/<module-name>.<minor-version>` or its canonical URL `<url-to-module-spec>`.
+> Refer to this document using the identifier `vt6/<module-name>.<minor-version>` or its canonical URL `<stable-url-to-module-spec>`.
 
 Everytime a new release of the module specification is made, its version number MUST be adjusted as follows:
 
@@ -204,6 +241,10 @@ Everytime a new release of the module specification is made, its version number 
 2. If the module specification has been changed in a backwards-incompatible way compared to the previous release, the major version number is incremented and the minor version number is reset to 0.
 
 This requirement does not apply when the release is only a draft or pre-release that is not considered normative, and clearly labeled as such.
+
+**Rationale:** This follows the basic notion of [semantic versioning](http://semver.org/spec/v2.0.0.html), albeit massively simplified to suit the usecase of module specifications.
+
+### 3.2. Compatbility across versions
 
 The following changes to a module specification are considered **backwards-compatible**:
 
@@ -219,41 +260,47 @@ The following changes to a module specification are considered **backwards-incom
 
 TODO These lists do not feel exhaustive. Double-check.
 
-**Rationale:** This follows the basic notion of [semantic versioning](http://semver.org/spec/v2.0.0.html), albeit massively simplified to suit the usecase of module specifications.
-
-### 3.1. Capability discovery
-
-TODO describe "want" and "have" message types
-
-## 4. Properties
-
-TODO define only the basic notion of properties here (note: MUST have an initial value)
-
-## 5. Capabilities
-
-## 6. Message types for `vt6/core1`
-
-### 6.1. The `core1.sub` message
+## 4. Protocol negotiation
 
 TODO
 
-### 6.2. The `core1.pub` message
+### 4.1. The `want` message
+
+TODO allow only bareword atoms here; needs to be done only once per module or capability; "want" for capability requires "want" for module
+
+### 4.2. The `have` message
+
+TODO allow only bareword atoms here; server may not "have" a capability without its module
+
+## 5. Message types for `vt6/core1`
+
+### 5.1. The `core1.sub` message
 
 TODO
 
-### 6.3. The `core1.set` message
+### 5.2. The `core1.pub` message
 
 TODO
 
-## 7. Properties for `vt6/core1`
-
-### 7.1. The `core1.server-max-message-bytes` property
+### 5.3. The `core1.set` message
 
 TODO
 
-### 7.2. The `core1.client-max-message-bytes` property
+## 6. Properties for `vt6/core1`
 
-TODO
+### 6.1. The `core1.server-max-message-bytes` property
+
+TODO only if large-messages capability
+
+### 6.2. The `core1.client-max-message-bytes` property
+
+TODO only if large-messages capability
+
+## 7. Capabilities for `vt6/core1`
+
+### 7.1. The `core1.large-messages` capability
+
+TODO this is a separate capability because simple implementations might want to hardcode their buffer size
 
 <!--
 
