--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -10,9 +10,9 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 
 ## 1. Definitions and platform requirements
 
-The VT6 protocol is divided into **modules** which each define **capabilities**.
-A process which implements VT6 capabilities and exposes them to other processes is called a **VT6 server**.
-A process that consumes these capabilities is called a **VT6 client**.
+The VT6 protocol is divided into **modules**.
+A process which implements VT6 modules and exposes them to other processes is called a **VT6 server**.
+A process that consumes this functionality is called a **VT6 client**.
 A process that acts both as a VT6 client to at least one process and as a VT6 server to at least one process at the same time is called as **VT6 proxy**.
 
 A process that acts as a VT6 server SHALL be able to launch other processes which can then act as VT6 clients, or it alternatively SHALL be able to delegate this task to other processes.
@@ -53,7 +53,7 @@ This section uses augmented Backus-Naur form (ABNF) as defined in [RFC5234](http
 ### 2.1. S-expression format
 
 ```abnf
-s-expression    = "(" *space 1*( ( s-expression / atom ) *space ) ")"
+s-expression    = "(" *space *( ( s-expression / atom ) *space ) ")"
 
 atom            = bareword / quoted-string
 
@@ -69,7 +69,7 @@ letter  = %x41-5A / %x61-7A ; letters A-Z and a-z
 space   = %x20 / %x09-0D    ; ASCII characters which are accepted by isspace() under the C locale
 ```
 
-Furthermore, the `<quoted-char>` element accepts all byte strings which encode exactly one Unicode character that is not in ASCII.
+Furthermore, the `<quoted-char>` element accepts all byte strings which encode exactly one Unicode character using the UTF-8 encoding, except for the ASCII backslash or the ASCII double quote.
 
 An **s-expression** is a parenthesis-delimited sequence of atoms or other s-expressions, which are referred to as the s-expression's **elements**.
 Whitespace (sequences of `<space>`) between the parentheses and atoms is ignored.
@@ -122,9 +122,9 @@ Each s-expression adhering to this specification is also a valid UTF-8-encoded s
 
 ```abnf
 version-number  = "0" / ( nzdigit *digit )
-strict-bareword = ( letter / "_" ) *( letter / "-" / "_")
+strict-bareword = ( letter / "_" ) *( letter / "-" / "_" )
 
-module-name    = strict-bareword version-number
+module-name    = strict-bareword version-number ; major version number only
 
 message-type   = "want" / "have" / ( module-name "." strict-bareword )
 
@@ -257,8 +257,6 @@ The following changes to a module specification are considered **backwards-incom
 
 - removal of a message type, property or capability
 - change of behavior of an existing message type, property or capability in such a way that there may exist programs that conform to the previous version of the specification, but not to the current one
-
-TODO These lists do not feel exhaustive. Double-check.
 
 ## 4. Protocol negotiation
 
