be strict about what is backwards-compatible

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -253,7 +253,7 @@ The following changes to a module specification are considered **backwards-compa
 - definition of previously undefined or underdefined behavior of an existing message type, property or capability
 - copyediting
 
-The following changes to a module specification are considered **backwards-incompatible**:
+Every other change to a module specification is considered **backwards-incompatible**, especially:
 
 - removal of a message type, property or capability
 - change of behavior of an existing message type, property or capability in such a way that there may exist programs that conform to the previous version of the specification, but not to the current one
