--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -144,7 +144,7 @@ message-stream = *( *space message ) *space
 
 A **VT6 message stream** (or just **message stream**, if the term is not ambiguous) is a sequence of VT6 messages which are optionally preceded, succeeded and/or separated by whitespace.
 
-**Rationale:** Allowing for whitespace between messages is especially useful when messages are emitted by a script in a language where a `print` operation appends a line separator by default.
+*Rationale:* Allowing for whitespace between messages is especially useful when messages are emitted by a script in a language where a `print` operation appends a line separator by default.
 As with s-expressions above, a message stream is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
 
 ### 2.3. Server-client communication
@@ -155,7 +155,8 @@ This specification does not restrict the form of these input and output data.
 
 TODO: define behavior and semantics of multiplexed mode (need some sort of escape sequence for `\x1B{`)
 
-*Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional connection to their server and have no way of establishing a separate bidirectional connection to use as message input/output. The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
+*Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional connection to their server and have no way of establishing a separate bidirectional connection to use as message input/output.
+The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
 
 ### 2.4. Invalid messages, and handling thereof
 
@@ -195,7 +196,7 @@ For each message type, property and capability defined in a module's specificati
 For example, a module with a name of `example2` may define a message type named `example2.foo` and a property named `example2.bar`, but not a message type named `example1.foo` or a property named `sample2.bar`.
 
 Each **message type** is defined by its name (see section 2.2) and a set of criteria describing when a message whose first element is the message type's name is to be considered valid by the recipient.
-These criteria include at least
+These criteria include at least:
 
 - the directionality (whether the message may be sent from a client to a server, or vice-versa, or both),
 - the capabilities that must be negotiated before messages of this type may be sent, if any,
