core1.0: more TODOs, clarification of rationale for sexps

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -112,9 +112,10 @@ A quoted string may represent a string containing double quotes or backslashes, 
 For example, the quoted string `"ab\\\"cd\""` represents the string `ab\"cd"`.
 For each string of Unicode characters, there exists exactly one quoted string that represents it.
 
-*Rationale:* We choose s-expressions because they can be implemented very easily, both on the generating and on the parsing side.
-They are as flexible and human-readable than JSON, TOML or YAML, but at the same time more compact than either of those.
-We do not include support for escape sequences because there is no apparent need for them.
+*Rationale:* We avoid compactly-coded escape sequences like those specified by [ECMA-48](https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-48,%202nd%20Edition,%20August%201979.pdf) aka ANSI&nbsp;X3.64 aka ISO/IEC&nbsp;6429 because of the risk that escape sequences specified by different modules collide with each other.
+We choose s-expressions because they can be implemented very easily, both on the generating and on the parsing side.
+They are as flexible and human-readable as JSON, TOML or YAML, but at the same time more compact than either of those.
+We do not include support for additional escape sequences in quoted strings because there is no apparent need for them.
 Users generating s-expressions will be using a programming or scripting language, and can take advantage of the escape sequences provided by these languages' string literals.
 Each s-expression adhering to this specification is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
 
@@ -153,7 +154,7 @@ When a VT6 client is running in normal mode, it sends messages to its server by 
 Furthermore, it can read input data from standard input and write output data to standard output.
 This specification does not restrict the form of these input and output data.
 
-TODO: define behavior and semantics of multiplexed mode (need some sort of escape sequence for `\x1B{`)
+TODO: define behavior and semantics of multiplexed mode (client identifies as VT6-compatible with magic number `\e[6V`, then switch between message stream and text stream with `\e`; use `\e\e` to represent `\e` inside text/message stream)
 
 *Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional connection to their server and have no way of establishing a separate bidirectional connection to use as message input/output.
 The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
@@ -258,6 +259,10 @@ Every other change to a module specification is considered **backwards-incompati
 
 - removal of a message type, property or capability
 - change of behavior of an existing message type, property or capability in such a way that there may exist programs that conform to the previous version of the specification, but not to the current one
+
+### 3.3. Module names
+
+TODO define rules for module names (`_` prefix for non-official modules, `__` prefix for private modules)
 
 ## 4. Protocol negotiation
 
