--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -23,11 +23,17 @@ These objects shall be called this client's **standard input** and **standard ou
 A VT6 client MAY have access to two further objects, or a method to gain access to two such objects, one from which byte strings can be read and one into which byte strings can be written.
 These objects shall be called this client's **message input** and **message output**, respectively.
 
+*Rationale:* The message input and output are separate from the standard input and output for applications where the VT6 client must be certain that the messages it sends are received by the VT6 server and not by another party (such as the next client in a shell pipe), and vice versa for server-to-client messages.
+In POSIX, the message input and output replace the [special capabilities of terminal devices](https://linux.die.net/man/3/termios).
+
 If the platform allows VT6 client processes to be started while a VT6 server is not present, the client process MUST have a method to determine whether a VT6 server is present.
 It SHALL then not be considered a VT6 client for the purpose of this specification, and any other specifications that inherit the meaning of the term "VT6 client" from it.
 
 If a VT6 client has access to and is using a message input and message output, it is said to be operating in **normal mode**.
 Otherwise, it is said to be operating in **multiplexed mode**.
+
+*Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional connection to their server and have no way of establishing a separate bidirectional connection to use as message input/output.
+The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
 
 ### 1.1. POSIX platform
 
@@ -148,16 +154,30 @@ A **VT6 message stream** (or just **message stream**, if the term is not ambiguo
 *Rationale:* Allowing for whitespace between messages is especially useful when messages are emitted by a script in a language where a `print` operation appends a line separator by default.
 As with s-expressions above, a message stream is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
 
+```abnf
+fenced-message-stream = escape-char message-stream escape-char
+
+escape-char = %x1B
+```
+
+A message stream is **fenced** when it is preceded by one ESC character and succeeded by another ESC character.
+
 ### 2.3. Server-client communication
 
 When a VT6 client is running in normal mode, it sends messages to its server by writing a message stream onto the message output, and receives messages from the server by reading a message stream from the message input.
 Furthermore, it can read input data from standard input and write output data to standard output.
 This specification does not restrict the form of these input and output data.
 
-TODO: define behavior and semantics of multiplexed mode (client identifies as VT6-compatible with magic number `\e[6V`, then switch between message stream and text stream with `\e`; use `\e\e` to represent `\e` inside text/message stream)
+When a VT6 client is running in multiplexed mode, it sends messages to its server by writing a *fenced* message stream onto the standard output.
+Any ESC character that is part of the output data or of a message inside the fenced message stream must be escaped by doubling it.
 
-*Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional connection to their server and have no way of establishing a separate bidirectional connection to use as message input/output.
-The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
+Conversely, a VT6 client running in multiplexed mode receives messages from its server by reading a *fenced* message stream from the standard input, whenever a single ESC character is encountered. Any two consecutive ESC characters SHALL be interpreted as a single ESC character in the input data or in the current message.
+
+A VT6 client running in multiplexed mode MUST write the magic string `<ESC>[6V` (decimal byte sequence 27, 91, 54, 126) into the standard output before writing anything else.
+The magic string is not considered to be part of the output data nor does it start a fenced message stream, so the escaping rule for ESC characters stated above does not apply.
+
+If the client fails to do so, all data written by the client into its standard output MUST be considered output data and the escaping rule for ESC characters does not apply.
+Furthermore, fenced message streams MUST NOT be written into the client's standard input, and the escaping rule for ESC characters does not apply to the input data written into it, either.
 
 ### 2.4. Invalid messages, and handling thereof
 
