core1.0: module naming conventions

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -280,9 +280,15 @@ Every other change to a module specification is considered **backwards-incompati
 - removal of a message type, property or capability
 - change of behavior of an existing message type, property or capability in such a way that there may exist programs that conform to the previous version of the specification, but not to the current one
 
-### 3.3. Module names
+### 3.3. Module naming conventions
 
-TODO define rules for module names (`_` prefix for non-official modules, `__` prefix for private modules)
+A module is considered **official** if its specifications are developed in the same location as this specification.
+The name of any unofficial module MUST start with a leading underscore and SHOULD indicate the organization that is responsible for its specification.
+
+A module is considered **private** if it is intended to be used by client and server implementations of a single vendor.
+The name of any private module SHOULD start with two leading underscores.
+
+*Rationale:* We strive to avoid name clashes between modules by different vendors, and reserves short module names for official modules to minimize message length for common messages.
 
 ## 4. Protocol negotiation
 
