incorporate remarks from @hkgit03

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -191,7 +191,7 @@ A message is **invalid** if...
 
 - the size of the bytestring encoding the message exceeds the recipient's maximum message size (see sections 6.1 and 6.2), usually 4096 bytes, or
 
-- the message type name is unknown or its use has not been agreed on by the recipient (see section 4).
+- the message type is unknown or its use has not been agreed to by the server (see section 4).
 
 A VT6 server receiving an invalid message from a VT6 client MUST act towards the client as if the message had never been received at all, and vice versa for messages from the server to the client.
 
@@ -270,7 +270,7 @@ Each module specification whose minor version number is bigger than 0 SHOULD ind
 
 **Rationale:** Implementors should not have to `diff` specification documents manually.
 
-### 3.2. Compatbility across versions
+### 3.2. Compatibility across versions
 
 The following changes to a module specification are considered **backwards-compatible**:
 
@@ -320,8 +320,9 @@ Quoted strings are not allowed in this message.
 *Rationale:* The syntax of the `want` message is deliberately minimized because of the compatibility requirements in section 3.2.
 
 The `want` message informs the server of modules and capabilities that the client wants to use.
-Each argument is a module name as accepted by `<module-name>`, or a capability name as accepted by `<message-type>`.
-For each argument that is a capability name, the server MUST already have agreed to using the module that defines this capability, or one of the arguments before this argument MUST be that module's name.
+Each argument is a module name as accepted by `<module-name>`, or a capability name as accepted by `<message-type>`, except for `want` and `have`.
+For each argument that is a capability name, the server MUST already have agreed to using the module that defines this capability.
+Alternatively, one of the arguments that comes before this argument MUST be that module's name.
 
 The first message that a client sends MUST be a `want` message, and the argument list MUST start with at least one version of `core` (i.e., any of `core1`, `core2`, `core3`, and so on).
 
@@ -343,7 +344,7 @@ For example, the following `want` message indicates that the client can use (at 
 Each argument MUST be a bareword.
 Quoted strings are not allowed in this message.
 
-*Rationale:* Same as above.
+*Rationale:* Same as in section 4.1.
 
 Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate which modules and capabilities in that `have` message it agrees to.
 If it does not agree to any of the modules and capabilities requested, it must reply with a `have` message with zero arguments.
@@ -352,6 +353,7 @@ If it does not agree to any of the modules and capabilities requested, it must r
 
 Each argument in the `have` message corresponds to an argument in the `want` message, except that modules and capabilities to which the server does not agree are omitted.
 This particularly means that the argument list of the `have` message MUST preserve the order of arguments in the `want` message.
+From this and the definition of the `want` message also follows that the use of a module must be agreed to before any of its capabilities can be agreed to.
 
 For `want` arguments that are capability names, the corresponding `have` argument is the same string, the capability name.
 A server SHALL NOT agree to using a capability if it has not previously agreed to using the module defining said capability, unless it agrees to using the module in the same `have` message.
