define that capabilities have a name

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -238,7 +238,9 @@ Each property is defined by its name (see section 2.2) and at least the followin
 - how the behavior of client and server is influenced by the value of this property.
 
 A **capability** is an aspect of the module specification that may not be supported by every server.
-The client therefore has to negotiate a capability (see section 4) before it can use the message types, properties or other behaviors restricted to this capability, even if the module which contains them has already been negotiated.
+The client therefore has to negotiate usage of a capability (see section 4) before it can use the message types, properties or other behaviors restricted to this capability, even if the module which contains them has already been negotiated.
+
+Each capability is defined by its name (see section 2.2) and by the message types, properties or other behaviors restricted to this capability.
 
 For each object (message type, property or capability) in a module, that module SHALL NOT contain a different object of the same name.
 
