core1.0: clarify client behavior if server does not agree to stuff

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -407,6 +407,10 @@ Each pair of messages is to be considered individually.
 --> "have" is invalid; "have" argument "qux1.0" does not correspond to any "want" argument
 ```
 
+The server is under no obligation of agreeing to any module or capability.
+Clients should be prepared to gracefully handle unavailable modules or capabilities.
+If the client finds that the server has not agreed to a module or capability that the client needs, it must exit.
+
 ## 5. Message types for `vt6/core1`
 
 ### 5.1. The `core1.sub` message
