adhere to style guide

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -172,7 +172,8 @@ This specification does not restrict the form of these input and output data.
 When a VT6 client is running in multiplexed mode, it sends messages to its server by writing a *fenced* message stream onto the standard output.
 Any ESC character that is part of the output data or of a message inside the fenced message stream must be escaped by doubling it.
 
-Conversely, a VT6 client running in multiplexed mode receives messages from its server by reading a *fenced* message stream from the standard input, whenever a single ESC character is encountered. Any two consecutive ESC characters SHALL be interpreted as a single ESC character in the input data or in the current message.
+Conversely, a VT6 client running in multiplexed mode receives messages from its server by reading a *fenced* message stream from the standard input, whenever a single ESC character is encountered.
+Any two consecutive ESC characters SHALL be interpreted as a single ESC character in the input data or in the current message.
 
 A VT6 client running in multiplexed mode MUST write the magic string `<ESC>[6V` (decimal byte sequence 27, 91, 54, 126) into the standard output before writing anything else.
 The magic string is not considered to be part of the output data nor does it start a fenced message stream, so the escaping rule for ESC characters stated above does not apply.
@@ -353,7 +354,8 @@ Quoted strings are not allowed in this message.
 Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate which modules and capabilities in that `have` message it agrees to.
 If it does not agree to any of the modules and capabilities requested, it must reply with a `have` message with zero arguments.
 
-*Rationale:* A client will typically wait for the `have` reply because the validity of subsequent messages depends on it. A missing `have` message might therefore stall the client forever.
+*Rationale:* A client will typically wait for the `have` reply because the validity of subsequent messages depends on it.
+A missing `have` message might therefore stall the client forever.
 
 Each argument in the `have` message corresponds to an argument in the `want` message, except that modules and capabilities to which the server does not agree are omitted.
 This particularly means that the argument list of the `have` message MUST preserve the order of arguments in the `want` message.
