--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -458,8 +458,8 @@ Moreover, a `core1.pub` message is invalid if any of its even-numbered arguments
 
 A `core1.pub` message can be sent by the server at any time to notify the client of changes to the values of properties that the client has subscribed to.
 Moreover, a `core1.pub` message MUST be sent by the server immediately upon receiving a valid `core1.sub` or `core1.set` message.
-This message MUST contain the values of all properties named in the `core1.pub` or `core1.set` message, in the same order.
-For `core1.pub` messages, this applies regardless of whether the client sending the message subscribes to properties for the first time, or whether subscriptions to these properties already existed for this client.
+This message MUST contain the values of all properties named in the `core1.sub` or `core1.set` message, in the same order.
+For `core1.sub` messages, this applies regardless of whether the client sending the message subscribes to properties for the first time, or whether subscriptions to these properties already existed for this client.
 
 The following snippet shows examples of valid and invalid pairs of `core1.sub` messages and `core1.pub` replies.
 The snippet is not a single message stream.
@@ -517,7 +517,7 @@ Notably, the message is not invalid if any of its even-numbered arguments is a v
 
 Setting a property implies subscribing to the property.
 That is, a `core1.set` message sent from a client to a server implies a `core1.sub` message from the same client to the same server that mentions the same properties that are mentioned in the `core1.set` message.
-This does not mean, however, that a separate `core1.pub` message must be sent to answer the implied `core1.pub` message.
+This does not mean, however, that a separate `core1.pub` message must be sent to answer the implied `core1.sub` message.
 For example,
 
 ```vt6
