allow barewords that are number literals

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -63,7 +63,7 @@ s-expression    = "(" *space *( ( s-expression / atom ) *space ) ")"
 
 atom            = bareword / quoted-string
 
-bareword        = ( letter / "_" ) *( letter / digit / "." / "-" / "_" )
+bareword        = 1*( letter / digit / "." / "-" / "_" )
 
 quoted-string   = quote *( quoted-char / bslash ( bslash / quote ) ) quote
 
@@ -468,7 +468,7 @@ The snippet assumes that `foo1.bar` and `foo1.baz` are properties which are defi
 
 ```vt6
 (core1.sub foo1.bar foo1.baz)
-(core1.pub foo1.bar hello-world foo1.baz "20")
+(core1.pub foo1.bar hello-world foo1.baz 20)
 --> valid; property "foo1.bar" has the value "hello-world" and "foo1.baz" has the value "20"
 
 (core1.sub foo1.bar foo1.baz)
@@ -476,7 +476,7 @@ The snippet assumes that `foo1.bar` and `foo1.baz` are properties which are defi
 --> valid, and semantically identical to the previous example since the bareword hello-world represents the same string as the quoted string "hello-world"
 
 (core1.sub foo1.bar foo1.baz)
-(core1.pub foo1.bar (hello (world)) foo1.baz "20")
+(core1.pub foo1.bar (hello (world)) foo1.baz 20)
 --> valid; property values may be arbitrarily complex s-expressions if the spec defining the property allows it
 
 (core1.sub foo1.bar foo1.baz)
@@ -488,11 +488,11 @@ The snippet assumes that `foo1.bar` and `foo1.baz` are properties which are defi
 --> invalid; missing a property mentioned in the `core1.sub` message
 
 (core1.sub foo1.bar foo1.baz)
-(core1.pub foo1.bar hello-world foo1.baz "20" foo1.extra "10")
+(core1.pub foo1.bar hello-world foo1.baz 20 foo1.extra 10)
 --> invalid; references a property not mentioned in the `core1.sub` message
 
 (core1.sub foo1.bar foo1.baz)
-(core1.pub foo1.baz "20" foo1.bar hello-world)
+(core1.pub foo1.baz 20 foo1.bar hello-world)
 --> invalid; properties not listed in correct order
 ```
 
