settle the naming of the properties

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -156,7 +156,7 @@ A **VT6 message stream** (or just **message stream**, if the term is not ambiguo
 As with s-expressions above, a message stream is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
 
 ```abnf
-fenced-message-stream = escape-char message-stream escape-char
+fenced-msg-stream = escape-char message-stream escape-char
 
 escape-char = %x1B
 ```
@@ -536,12 +536,12 @@ The server may refuse to change the property's value at all (especially if the p
 This is why a `core1.pub` message is sent as a reply for a `core1.set` message.
 The client SHOULD observe the `core1.pub` reply to learn whether the requested changes were accepted.
 
-*Rationale:* For example, consider the case of the client trying to set `core1.client-max-message-bytes` to `32768`.
+*Rationale:* For example, consider the case of the client trying to set `core1.client-msg-bytes-max` to `32768`.
 The server might reject this, and report the previous value in the `core1.pub` response; or it might choose a value inbetween the previous and the requested value because it absolutely cannot process messages larger than that.
 
 ## 6. Properties for `vt6/core1`
 
-### 6.1. The `core1.server-max-message-bytes` property
+### 6.1. The `core1.server-msg-bytes-max` property
 
 - Acceptable values: unsigned integer literals
 - Required capabilities: none
@@ -558,7 +558,7 @@ The property is read-only unless the server agrees to the `core1.large-messages`
 
 TODO define a library of standard data types in the grammar section, that can be reused in property definitions like this one
 
-### 6.2. The `core1.client-max-message-bytes` property
+### 6.2. The `core1.client-msg-bytes-max` property
 
 - Acceptable values: unsigned integer literals
 - Required capabilities: none
@@ -577,4 +577,4 @@ The property is read-only unless the server agrees to the `core1.large-messages`
 
 ### 7.1. The `core1.large-messages` capability
 
-This capability enables the client to negotiate different (usually larger) message sizes with the server, by changing the values of the `core1.server-max-message-bytes` and `core1.client-max-message-bytes` properties.
+This capability enables the client to negotiate different (usually larger) message sizes with the server, by changing the values of the `core1.server-msg-bytes-max` and `core1.client-msg-bytes-max` properties.
