--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -290,7 +290,7 @@ Every other change to a module specification is considered **backwards-incompati
 - change of behavior of an existing message type, property or capability in such a way that there may exist programs that conform to the previous version of the specification, but not to the current one
 
 As an additional rule, all versions of the `core` module (i.e., any version of `core1`, `core2`, `core3`, and so on) MUST be backwards-compatible with the parts of this specification that relate to all client and server behavior that takes place before a concrete version of the `core` module has been agreed to by the server.
-This includes, specifically,
+This includes, specifically:
 
 - the parts of sections 1 and 2.3 that describe how client and server establish a connection to each other and use it to exchange messages, and
 - the syntax of `want` and `have` messages as described in section 2.1 and 4.
