Fix: fenced-message-stream accidentally renamed to fenced-msg-stream

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -156,7 +156,7 @@ A **VT6 message stream** (or just **message stream**, if the term is not ambiguo
 As with s-expressions above, a message stream is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
 
 ```abnf
-fenced-msg-stream = escape-char message-stream escape-char
+fenced-message-stream = escape-char message-stream escape-char
 
 escape-char = %x1B
 ```
