fix ABNF syntax errors, make link more specific

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -310,8 +310,8 @@ The name of any private module SHOULD start with two leading underscores.
 ### 3.4. Predefined property types
 
 ```abnf
-integer          = "0" | ( 0*1sign nzdigit *digit )
-unsigned-integer = "0" | ( nzdigit *digit )
+integer          = "0" / ( [sign] nzdigit *digit )
+unsigned-integer = "0" / ( nzdigit *digit )
 
 sign = "+" / "-"
 ```
@@ -319,7 +319,7 @@ sign = "+" / "-"
 When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all atoms whose string value matches the `<integer>` grammar element defined above.
 Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all atoms whose string value matches the `<unsigned-integer>` grammar element defined above.
 
-In both these cases, the numerical value of each such atom is that value which is returned when the `atoll()` function as defined in [the POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/) is applied to the string value of the atom.
+In both these cases, the numerical value of each such atom is that value which is returned when the `atoll()` function as defined in [the POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/functions/atoll.html) is applied to the string value of the atom.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
 Section 6 of this specification uses the property types defined in this section.
