first draft for sig1.0 module

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -28,3 +28,18 @@ Therefore, VT6 clients MUST use the following method to determine whether a VT6 
 2. If the `TERM` environment variable is present and contains the string `vt6`, the VT6 client SHALL assume that a VT6 server is present, and operate in multiplexed mode.
 
 3. If the `VT6` environment variable is absent and the `TERM` environment variable does not contain the string `vt6`, the VT6 client MUST consider the VT6 server to be absent.
+
+## 3. Definitions for the `vt6/sig1` module
+
+VT6 signals are dispatched to clients by sending the corresponding POSIX signals to the client processes:
+
+- The `sig1.interrupt` message corresponds to the `SIGINT` signal.
+- The `sig1.quit` message corresponds to the `SIGQUIT` signal.
+- The `sig1.suspend` message corresponds to the `SIGSTOP` signal.
+
+When there is no signal receiver, the terminal SHOULD run all clients inside a single process group, and send these POSIX signals to that process group.
+
+When there is a signal receiver, the signal receiver SHALL use at least one process group in the same way.
+If the signal receiver can distinguish between client processes running in the foreground or in the background, it SHOULD use multiple process groups to track which processes are running in the foreground and send the POSIX signals to the current foreground process group.
+
+When a server or signal receiver uses the `SIGSTOP` signal to suspend processes, the `SIGCONT` signal SHALL be used to resume these processes once the user instructs the server or signal receiver to do so.
